apps/homebox/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  labels:
    app: homebox
spec:
  type: NodePort
  ports:
    - port: 7745
      protocol: TCP
  selector:
    app: homebox
